# rust-patterns

./: Cargo.toml  README.md
src/: choice.rs  common.rs  lib.rs  listener.rs  visitor.rs
src/choice/: dyn_obj.rs  enum_with_impl.rs  enum_with_trait.rs
src/common/: hellosayer.rs
src/factory/: backup.rs  factory_class.rs  factory_method.rs
src/listener/: dyn_trait.rs  enum_container.rs
